syntax = "proto3";
package tracing.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/tracing";

import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/config/trace/v3/zipkin.proto";
import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/config/trace/v3/datadog.proto";
import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/config/trace/v3/opentelemetry.proto";
import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/config/trace/v3/opencensus.proto";


import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

import "extproto/ext.proto";
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;
option (extproto.equal_all) = true;

import "github.com/solo-io/solo-kit/api/v1/ref.proto";


// Contains settings for configuring Envoy's tracing capabilities at the listener level.
// See [here](https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/observability/tracing.html) for additional information on Envoy's tracing capabilities. 
// See [here](https://docs.solo.io/gloo-edge/latest/guides/observability/tracing/) for additional information about configuring tracing with Gloo Edge.
message ListenerTracingSettings {
    // Optional. If specified, Envoy will include the headers and header values for any matching request headers.
    repeated google.protobuf.StringValue request_headers_for_tags = 1;
    // Optional. If true, Envoy will include logs for streaming events. Default: false.
    google.protobuf.BoolValue verbose = 2;
    // Requests can produce traces by random sampling or when the `x-client-trace-id` header is provided.
    // TracePercentages defines the limits for random, forced, and overall tracing percentages.
    TracePercentages trace_percentages = 3;
    // Optional. If not specified, no tracing will be performed
    // ProviderConfig defines the configuration for an external tracing provider.
    oneof provider_config {
        .solo.io.envoy.config.trace.v3.ZipkinConfig zipkin_config = 4;
        .solo.io.envoy.config.trace.v3.DatadogConfig datadog_config = 5;
        .solo.io.envoy.config.trace.v3.OpenTelemetryConfig open_telemetry_config = 8;
        .solo.io.envoy.config.trace.v3.OpenCensusConfig open_census_config = 9;
    }
    // Optional. If specified, Envoy will include the environment variables with the given tag as tracing tags.
    repeated TracingTagEnvironmentVariable environment_variables_for_tags = 6;
    // Optional. If specified, Envoy will include the literals with the given tag as tracing tags.
    repeated TracingTagLiteral literals_for_tags = 7;
    // Optional. If specified, Envoy will include tags from the dynamic metadata.
    repeated TracingTagMetadata metadata_for_tags = 11;

    // Optional
    // Create separate tracing span for each upstream request if true. And if this flag is set to true, the tracing provider will assume that Envoy 
    // will be independent hop in the trace chain and may set span type to client or server based on this flag. 
    bool spawn_upstream_span = 10;
}

// Contains settings for configuring Envoy's tracing capabilities at the route level.
// Note: must also specify ListenerTracingSettings for the associated listener.
// See [here](https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/observability/tracing.html) for additional information on Envoy's tracing capabilities.
// See [here](https://docs.solo.io/gloo-edge/latest/guides/observability/tracing/) for additional information about configuring tracing with Gloo Edge.
message RouteTracingSettings {
    // Optional. If set, will be used to identify the route that produced the trace.
    // Note that this value will be overridden if the "x-envoy-decorator-operation" header is passed.
    string route_descriptor = 1;
    // Requests can produce traces by random sampling or when the `x-client-trace-id` header is provided.
    // TracePercentages defines the limits for random, forced, and overall tracing percentages.
    TracePercentages trace_percentages = 2;
    // Optional. Default is true, If set to false, the tracing headers will not propagate to the upstream.
    google.protobuf.BoolValue propagate = 3;
}

// Requests can produce traces by random sampling or when the `x-client-trace-id` header is provided.
// TracePercentages defines the limits for random, forced, and overall tracing percentages.
message TracePercentages {
    // Percentage of requests that should produce traces when the `x-client-trace-id` header is provided.
    // optional, defaults to 100.0
    // This should be a value between 0.0 and 100.0, with up to 6 significant digits.
    google.protobuf.FloatValue client_sample_percentage = 1;
    // Percentage of requests that should produce traces by random sampling.
    // optional, defaults to 100.0
    // This should be a value between 0.0 and 100.0, with up to 6 significant digits.
    google.protobuf.FloatValue random_sample_percentage = 2;
    // Overall percentage of requests that should produce traces.
    // optional, defaults to 100.0
    // This should be a value between 0.0 and 100.0, with up to 6 significant digits.
    google.protobuf.FloatValue overall_sample_percentage = 3;
}

// Requests can produce traces with custom tags.
// TracingTagEnvironmentVariable defines an environment variable which gets added as custom tag.
message TracingTagEnvironmentVariable {
    // Used to populate the tag name.
    google.protobuf.StringValue tag = 1;
    // Environment variable name to obtain the value to populate the tag value.
    google.protobuf.StringValue name = 2;
    // When the environment variable is not found, the tag value will be populated with this default value if specified,
    // otherwise no tag will be populated.
    google.protobuf.StringValue default_value = 3;
}

// Requests can produce traces with custom tags.
// TracingTagLiteral defines a literal which gets added as custom tag.
message TracingTagLiteral {
    // Used to populate the tag name.
    google.protobuf.StringValue tag = 1;
    // Static literal value to populate the tag value.
    google.protobuf.StringValue value = 2;
}

// Requests can produce traces with custom tags.
// TracingTagMetadata defines a dynamic metadata tag which gets added as custom tag.
message TracingTagMetadata {
    enum Kind {
      // The metadata is extracted from the stream metadata.
      REQUEST = 0;
      // The metadata is extracted from the endpoint metadata.
      ENDPOINT = 1;
    }
    // Used to populate the tag name.
    string tag = 1;
    // The kind of metadata to extract the value from 
    Kind kind = 2;

    message MetadataValue {
      // The namespace to extract the value from the metadata.
      // If empty will default to JWT principal namespace.
      string namespace = 1;
      // The key to extract the value from the metadata.
      // For example, `principal.iss` or `principal.sub` to extract those claims from the JWT ns
      string key = 2;
      // The delimiter to use when specifying nested fields.
      // Default is `.`.
      // This is commonly set to `.`, allowing for nested fields names of the form
      // `parent.child.grandchild`
      string nested_field_delimiter = 3;
    }
    // The metadata value to extract the tag value from.
    MetadataValue value = 3;
    // When no valid metadata is found, the tag value would be populated with this default value if specified, otherwise no tag would be populated.
    string default_value = 4;
}
